@@ -27,13 +27,14 @@ __doc__ = """
 CacheDir support
 """
 
+import atexit
 import json
 import os
 import stat
 import sys
 
-import SCons
 import SCons.Action
+import SCons.Errors
 import SCons.Warnings
 
 cache_enabled = True
@@ -202,7 +203,11 @@ class CacheDir:
             if cache_debug == '-':
                 self.debugFP = sys.stdout
             elif cache_debug:
+                def debug_cleanup(debugFP):
+                    debugFP.close()
+
                 self.debugFP = open(cache_debug, 'w')
+                atexit.register(debug_cleanup, self.debugFP)
             else:
                 self.debugFP = None
             self.current_cache_debug = cache_debug
